add spring security, swagger, add product api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=@Hoang_123456
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
 server.port=3000
+jwt.secret=ronaldo-siuuu
+jwt.expiration=100000000
