add rest template, add mybatis config & mapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/reskill-java
 spring.datasource.username=root
 spring.datasource.password=@Hoang_123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=3000
-jwt.secret=ronaldo-siuuu
-jwt.expiration=100000000
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.servlet.session.persistent=false
