--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.7</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-envers</artifactId>
             <version>5.6.14.Final</version>
